<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">皇包车</string>
    <string name="hbc_scheme">hbcc</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_imchat">聊天</string>
    <string name="custom_chartered">按天包车游</string>
    <string name="custom_single">单次接送</string>
    <string name="custom_pick_up">中文接机</string>
    <string name="custom_send">中文送机</string>
    <string name="custom_fixed_line">固定线路</string>
    <string name="custom_recommend_line">推荐线路</string>
    <string name="collect">收藏Ta</string>
    <string name="uncollect">已收藏</string>
    <string name="to_evaluate">去评价</string>
    <string name="evaluated">已评价</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="gender_secrecy">保密</string>
    <string name="yuan">元</string>
    <string name="share">分享</string>
    <string name="share_friend">分享好友</string>
    <string name="share_moments">分享朋友圈</string>
    <string name="solidus">%1$s&#160;/&#160;%2$s</string>
    <string name="more">更多</string>
    <string name="pick_up">收起</string>
    <string name="sign_rmb">¥</string>
    <string name="separator">%1$s-%2$s</string>
    <string name="piece">件</string>
    <string name="people">人</string>
    <string name="collect_succeed">收藏成功</string>
    <string name="collect_cancel">已取消收藏</string>
    <string name="platenumber">车牌：</string>
    <string name="domestic_call">境内请拨打:</string>
    <string name="overseas_call">境外请拨打:</string>
    <string name="domestic_phone">400-610-0009</string>
    <string name="overseas_phone">+86&#160;1059715436</string>
    <string name="call">打电话</string>
    <string name="private_chat">发私聊</string>
    <string name="wechat">微信</string>
    <string name="moments">朋友圈</string>
    <string name="cancel">取消</string>
    <string name="hint">提示</string>
    <string name="ok">好</string>
    <string name="ok2">好的</string>
    <string name="last_step">返回上一步</string>
    <string name="chat">私聊</string>
    <string name="phone">手机号</string>
    <string name="jump">跳过</string>
    <string name="hbc_confirm">确定</string>
    <string name="hbc_submit">提交</string>
    <string name="picksend">接送机</string>
    <string name="free_price">免费</string>
    <string name="hbc_back">返回</string>
    <string name="call_info_tip">如有问题，请拨打客服电话 4006 1000 66</string>
    <string name="register_info_tip">注册即表示我同意"皇包车"的用户协议</string>
    <string name="user_info_tip">且代表您已同意《皇包车会员服务协议》</string>
    <string name="user_info_tip1">皇包车会员服务协议</string>
    <string name="register_info_tip_protocol">用户协议</string>
    <string name="login_country_search_hint">搜索国际或区号</string>
    <string name="dialog_btn_search">搜索</string>
    <string name="dialog_btn_ok">确认</string>
    <string name="dialog_btn_sure">确定</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_btn_setting">设置</string>
    <string name="dialog_btn_again">再来一次</string>
    <string name="dialog_btn_back">确认离开</string>
    <string name="complete">完成</string>
    <string name="dialog_btn_know">我知道了</string>
    <string name="grant_fail_title">授权失败</string>
    <string name="grant_fail_btn">重新获取</string>
    <string name="grant_fail_btn_exit">退出应用</string>
    <string name="grant_fail_phone1">您选择了不再提醒授权，请进入设置-应用中为应用授权</string>
    <string name="grant_fail_sdcard">权限只是用做存储照片使用，拒绝将不能正常使用</string>
    <string name="grant_fail_camera">权限只是用做拍摄头像照片使用，拒绝将不能拍摄头像</string>
    <string name="grant_fail_phone">权限只是用做识别身份使用，拒绝将不能正常使用</string>
    <string name="grant_fail_im">权限只是用做聊天基础功能使用，拒绝将不能正常使用</string>
    <string name="two_exit">再按一次退出程序</string>
    <string name="network_error">网络链接错误</string>
    <string name="no_network"> 当前网络不可用，请检查网络连接</string>
    <string name="no_room">存储空间不足，建议清除存</string>
    <string name="net_overtime">网络链接超时啦</string>
    <string name="net_error">网络异常，需要关闭！</string>
    <string name="login_error">登录失败，需要关闭！</string>
    <string name="exit_msg">您确定要退出程序？</string>
    <string name="logout_msg">您确定要退出当前帐号？</string>
    <string name="data_load">数据加载中...</string>
    <string name="data_load_error">数据加载失败</string>
    <string name="apk_updata">软件载入下载列表...</string>
    <string name="data_none">没有加载到任何相关的数据！</string>
    <string name="loading">正在联网...</string>
    <string name="refresh">刷新</string>
    <string name="reconnect">连接失败，系统正在重新加载...</string>
    <string name="login_progress_dialog">正在登录...</string>
    <string name="no_content_info">没有相关项目</string>
    <string name="arrival_tip_hotel">如果您的出发地点是酒店，请搜索酒店名称</string>
    <string name="arrival_tip_same">留意相似名称的地点,确认地址是否正确</string>
    <string name="arrival_empty_text">很抱歉，没有找到与[%s]相关的结果,或者搜索地点超出当前城市驾车范围</string>
    <string name="data_load_error_retry">加载失败，点击重试！</string>
    <string name="login_hint">陛下，请登录后重试！</string>
    <string name="error_parser">解析错误</string>
    <string name="error_nofound">找不到网页错误</string>
    <string name="error_url">地址错误</string>
    <string name="error_net">连接失败</string>
    <string name="error_ssl">连接失败(SSL)</string>
    <string name="error_other">连接失败</string>
    <string name="list_empty">暂无数据</string>
    <string name="submit_success">提交成功</string>
    <string name="web_error">网络不给力，点击重新加载!</string>
    <string name="title_pick">接机</string>
    <string name="title_send">送机</string>
    <string name="title_daily">包车游</string>
    <string name="title_daily_in_town">包车游</string>
    <string name="title_daily_out_town">包车游</string>
    <string name="title_rent">单次接送</string>
    <string name="title_commend">线路包车</string>
    <string name="title_daily_small">小长途</string>
    <string name="title_daily_large">大长途</string>
    <string name="title_other">订单详情</string>
    <string name="title_choose_airport">选择机场</string>
    <string name="title_transfer">接送机</string>
    <string name="title_chinese_transfer">中文接送机</string>
    <string name="tab_home">首页</string>
    <string name="tab_des">目的地</string>
    <string name="tab_chat">私聊</string>
    <string name="tab_journey">行程</string>
    <string name="tab_space">我的</string>
    <string name="home_main_title">全球10万华人朋友</string>
    <string name="home_sub_title">开车带你玩</string>
    <string name="contact_service">联系客服</string>
    <string name="online_service">在线咨询</string>
    <string name="search_hint_pick">请输入地点名称</string>
    <string name="search_hint_send">搜索出发地点</string>
    <string name="search_hint_city">请输入城市名称</string>
    <string name="progress_trip">填写行程</string>
    <string name="progress_car">选车</string>
    <string name="progress_order">提交订单</string>
    <string name="progress_pay">支付</string>
    <string name="tip_which_flight">您乘坐的航班</string>
    <string name="tip_where_togo">您要去哪里？</string>
    <string name="btn_select_car">去选车</string>
    <string name="title_pick_flight">选择航班</string>
    <string name="tip_pick_flight_time">起飞日期</string>
    <string name="tip_pick_flight_from">出发城市</string>
    <string name="tip_pick_flight_to">到达城市</string>
    <string name="tap_flight">按航班号</string>
    <string name="tap_city">按城市</string>
    <string name="tap_city_tip">如有中转请写末趟航班</string>
    <string name="title_pick_flight_list">选择航班</string>
    <string name="flight_empty_no_city">很抱歉，没有找到您搜索的航班\n可联系客服，帮您查找</string>
    <string name="flight_empty_tip">如有中转请搜索末趟航班</string>
    <string name="flight_empty_tip2">确定使用此航班号订车?</string>
    <string name="flight_empty_btn">手动填写航班信息</string>
    <string name="title_pick_flight_customer">航班信息</string>
    <string name="tip_pick_flight_no">航班号，如CA985</string>
    <string name="tip_pick_flight_airport">降落机场</string>
    <string name="tip_pick_flight_down_time">飞机降落的当地时间</string>
    <string name="daily_tip">下单成功后，会有专属司导为您定制详细行程</string>
    <string name="daily_tap_in_town">市内包车</string>
    <string name="daily_tap_out_town">跨城市包车</string>
    <string name="car_tip"><u>费用说明</u></string>
    <string name="daily_half_day_alert">当您的行程不足一天时可以半日包车，服务时间5小时，最大里程150公里</string>
    <string name="submit_airno">航班%s落地时间</string>
    <string name="submit_car_info">乘坐%1$d人,行李%2$d件</string>
    <string name="submit_name">联系人姓名</string>
    <string name="submit_phone">联系电话</string>
    <string name="submit_phone_add">＋增加备用电话</string>
    <string name="submit_adult">成人%d</string>
    <string name="submit_child">儿童%d</string>
    <string name="submit_pick_name">接机牌姓名</string>
    <string name="submit_send_hotel">入住酒店联系电话</string>
    <string name="submit_flight_no">选择起飞航班号</string>
    <string name="submit_send_hotel_tip">如果您的用车地址是酒店，请填写电话方便司导确认酒店具体位置</string>
    <string name="submit_chose_visa">选择签证信息</string>
    <string name="submit_remark_tip">您可以在这里注明其他需求，以及需要司导知道的其他行程细节</string>
    <string name="submit_order_cancel"><u>订单取消规则</u></string>
    <string name="submit_order_tip"><u>预订须知</u></string>
    <string name="submit_order_over_tip"><u>后付费用计价规则</u></string>
    <string name="submit_btn">下一步</string>
    <string name="submit">提交</string>
    <string name="letter_order_state1">未开始</string>
    <string name="letter_order_state2">进行中</string>
    <string name="letter_order_state3">已完成</string>
    <string name="letter_chat_btn">历史订单</string>
    <string name="pay_tip_thailand"><u>泰国接机说明</u></string>
    <string name="order_cancel_tip">确定要取消行程吗？</string>
    <string name="order_cancel_succeed">取消订单成功</string>
    <string name="order_cancel_tip2" formatted="false">距离服务开始时间24小时前取消及更改，免收退改费,可全额退款;\n服务开始时间24小时内取消及更改，将收取订单金额的100%作为退改费。</string>
    <string name="order_cancel_tip3">\n跨城市长途包车距离服务开始时间48小时内取消及更改，将产生司导住宿费用，收取订单金额20%用于补偿司导损失。</string>
    <string name="pay_time_tip">请在%1$s内付款,以免订单取消</string>
    <string name="order_cancel_pay">下单后%1$s订单将被取消，请尽快完成支付</string>
    <string name="promise_title_all">一价全包</string>
    <string name="promise_title_wait">免费等待</string>
    <string name="promise_title_app">增值服务</string>
    <string name="promise_title_pay">先行赔付</string>
    <string name="promise_title_safe">免费保险</string>
    <string name="promise_content_all">皇包车服务为一价全包(但不包含预订的标准服务外的超公里、超时等后付费用)</string>
    <string name="promise_content_wait">接机产品提供飞机落地后免费等待60分钟(以航班实际落地30分钟后开始计算)</string>
    <string name="promise_content_app">服务提供中文导游服务，日租服务提供行程规划、景点讲解等服务</string>
    <string name="promise_content_pay">皇包车如未如约提供服务，将无条件退还预订费用并给出相应赔偿</string>
    <string name="user_name">联系人</string>
    <string name="user_name_hint">请填写联系人姓名</string>
    <string name="user_phone">联系电话</string>
    <string name="user_phone_hint">请填写联系人电话</string>
    <string name="remark">备注</string>
    <string name="remark_hint">您可以在这里注明其他需求，以及需要司导知道的其他行程细节</string>
    <string name="suk_area_code"><![CDATA[区号 > ｜]]></string>
    <string name="go_citys">游玩日期</string>
    <string name="select_go_citys">请选择游玩日期</string>
    <string name="select_people_tips">请选择出发人数</string>
    <string name="select_city_man">成人</string>
    <string name="select_city_child">儿童</string>
    <string name="select_city_child_12">(12岁及以下)</string>
    <string name="add_day_tips">当天费用将包含司导住宿补贴</string>
    <string name="collect_guide_empty_prompt1">陛下，您当前暂时还没有收藏司导呢！</string>
    <string name="collect_guide_empty_prompt2">您可以在完成一段行程后收藏喜欢的司导</string>
    <string name="collect_guide_empty_prompt3">或收藏朋友给您推荐的司导</string>
    <string name="order_detail_unsubscribe">订单退改规则：</string>
    <string name="order_detail_timeleft">请在有效期</string>
    <string name="order_detail_insurance_describe">不要错过皇包车送您的境外旅游保险哦</string>
    <string name="order_detail_tips_title">平台保障：</string>
    <string name="order_detail_tips">订单款项由皇包车平台先行保管，服务完成才会支付给司导。如在服务过程中发生任何问题请及时联系皇包车客服，您与司导在APP内的聊天内容可作为纠纷凭证；经查证如属司导违约，您可获得相应补偿。</string>
    <string name="commit_agree_click">皇包车协议和条款</string>
    <string name="order_detail_add_policy_holder">添加投保人</string>
    <string name="order_detail_timeright">内，添加投保人信息</string>
    <string name="order_detail_insurance">~</string>
</resources>