<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/allbg_gray"
    android:orientation="vertical"
    android:padding="30dip">

    <EditText
        android:id="@+id/pick_flight_no"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rounded_rectangle_white"
        android:textColorHint="@color/change_mobile_hint"
        android:hint="@string/tip_pick_flight_no"
        android:textSize="16sp"
        android:padding="15dip" />

    <TextView
        android:id="@+id/pick_flight_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@drawable/shape_rounded_rectangle_white"
        android:textSize="16sp"
        android:hint="@string/tip_pick_flight_time"
        android:textColorHint="@color/change_mobile_hint"
        android:padding="15dip" />

    <Button
        android:id="@+id/pick_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@drawable/btn_orange"
        android:text="@string/dialog_btn_search"
        android:textColor="@color/basic_white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dip"
        android:text="@string/tap_city_tip" />
</LinearLayout>