<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@mipmap/loding_bg"
    >
    <LinearLayout
        android:id="@+id/home_menu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:paddingBottom="@dimen/home_menu_layout_margin"
        android:paddingTop="50dp">

        <TextView
            android:id="@+id/fg_home_menu1"
            style="@style/HomeMenuStyle"
            android:drawableTop="@mipmap/home_menu01"
            android:text="@string/title_pick" />

        <TextView
            android:id="@+id/fg_home_menu2"
            style="@style/HomeMenuStyle"
            android:drawableTop="@mipmap/home_menu02"
            android:text="@string/title_daily" />

        <TextView
            android:id="@+id/fg_home_menu3"
            style="@style/HomeMenuStyle"
            android:drawableTop="@mipmap/home_menu03"
            android:text="@string/title_rent" />
    </LinearLayout>

</RelativeLayout>
