<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="40dp"
    android:paddingLeft="@dimen/sku_order_padding_left"
    android:paddingRight="@dimen/sku_order_padding_left"
    android:paddingTop="17dp">

    <LinearLayout
        android:id="@+id/order_detail_terms_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingTop="2dp"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commit_agree_sku"
            android:textColor="#8e8e8e"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/order_detail_terms_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commit_agree_click"
            android:layout_marginLeft="2dp"
            android:textColor="#8e8e8e"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_detail_tips_title"
        android:textColor="#8e8e8e"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/order_detail_tips"
        android:textColor="#b2b2b2"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/order_detail_unsubscribe"
        android:textColor="#8e8e8e"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/order_detail_explain_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColor="#b2b2b2"
        android:textSize="12sp" />
</LinearLayout>