<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/default_dividing_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white">

        <LinearLayout
            android:id="@+id/order_detail_insurance_hint_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_detail_insurance_time_hint_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_detail_timeleft"
                android:textColor="#333333"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/order_detail_insurance_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4天2小时30分"
                android:textColor="#fe6732"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/order_detail_insurance_time_tv_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_detail_timeright"
                android:textColor="#333333"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_below="@+id/order_detail_insurance_hint_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_detail_insurance_describe"
                android:textColor="#333333"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/order_detail_insurance_explain_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_detail_insurance"
                android:textColor="#333333"
                android:textSize="12sp"/>
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/order_detail_insurance_add_tv"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/selector_order_detail_pay"
        android:gravity="center"
        android:text="@string/order_detail_add_policy_holder"
        android:textColor="#3c382f"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>