<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="#d3d4d5"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/add_day_item"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#d3d4d5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/day_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/go_citys"
            android:textColor="#919293"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/day_go_city_text_click"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:gravity="left"
            android:text="@string/select_go_citys"
            android:textColor="#919293"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/add_tips"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="25dp"
        android:background="#fdfed8"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/add_day_tips"
        android:textColor="#67675c"
        android:textSize="12sp" />
</LinearLayout>

