<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="bottom"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/all_bg_yellow"
        android:layout_height="60dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:textColor="@color/basic_white"
            android:text="@string/dialog_btn_cancel"
            android:id="@+id/cancle"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:textColor="@color/basic_white"
            android:text="@string/dialog_btn_sure"
            android:id="@+id/ok"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_alignParentRight="true"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_toLeftOf="@id/ok"
            android:layout_toRightOf="@id/cancle"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:textColor="@color/basic_white"
            android:text="@string/select_people_tips"
            android:id="@+id/title"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/basic_white"
        android:layout_height="300dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:textColor="@color/basic_black"
                android:text="@string/select_city_man"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_alignParentLeft="true"/>

            <ListView
                android:id="@+id/man_list"
                android:listSelector="#00000000"
                android:layout_width="match_parent"
                android:divider="@null"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/basic_black"
                    android:text="@string/select_city_child"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:layout_alignParentLeft="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/basic_black"
                    android:text="@string/select_city_child_12"
                    android:gravity="center|bottom"
                    android:textSize="15sp"
                    android:layout_alignParentLeft="true"/>
            </LinearLayout>

            <ListView
                android:id="@+id/child_list"
                android:listSelector="#00000000"
                android:layout_width="match_parent"
                android:divider="@null"
                android:layout_height="match_parent"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>